--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
                       NMap e ZMap foram desenvolvidos para propósitos bem diferentes. Enquanto o NMap é otimizado
                       para varrer um número grande de portas em um host ou num número reduzido de hosts, o ZMap é
                       feito para varrer somente uma porta em toda a rede da Internet. A título de comparação, ao se
-                      varrer a porta 443 em um milhão de endereços IP usando o TCP SYN, é estimada uma duração de
+                      varrer a porta 443 em todo o espaço de endereços IPv4 usando o TCP SYN, é estimada uma duração de
                       1h10min para o ZMap e 63 dias para o NMap [1].
                       <center>
                       <img vspace="30" src="images/zmap-talksec1.jpg" alt="comparacao1">
